--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -3,63 +3,63 @@
 en:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "Váš účet byl úspěšně potvrzen. Nyní jste přihlášen(a)."
+      send_instructions: "Za několik minut obdržíte email s instrukcemi k potvrzení vašeho účtu."
+      send_paranoid_instructions: "Pokud je e-mailová adresa v naší databázi, obdržíte na ní instrukce pro potvrzení vašeho účtu."
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
+      already_authenticated: "Přihlášení již proběhlo."
+      inactive: "Váš účet ještě nebyl aktivován."
+      invalid: "Neplatný %{authentication_keys} nebo heslo."
+      locked: "Váš účet je uzamčen."
+      last_attempt: "Máte ještě jeden pokus, než bude váš účet uzamčen."
       not_found_in_database: "Neplatný %{authentication_keys} nebo heslo."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "Než budete pokračovat, musíte se přihlásit nebo zaregistrovat."
-      unconfirmed: "You have to confirm your email address before continuing."
+      timeout: "Vaše relace vypršela, přihlašte se prosím znovu, pak můžete pokračovat."
+      unauthenticated: "Musíte se zaregistrovat nebo přihlásit, pak můžete pokračovat."
+      unconfirmed: "Musíte potvrdit svůj účet, pak můžete pokračovat."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Instrukce pro potvrzení účtu"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Instrukce k nastavení nového hesla"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Instrukce k odemknutí účtu"
       email_changed:
-        subject: "Email Changed"
+        subject: "E-mail byl změněn"
       password_change:
-        subject: "Password Changed"
+        subject: "Heslo bylo změněno"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "Není možné autorizovat z %{kind}, protože: \"%{reason}\"."
+      success: "Úspěšná autorizace z účtu %{kind}."
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "Tato stránka je přístupná pouze přes e-mail k obnovení hesla. Pokud jste se na stránku dostali z e-mailu pro obnovení hesla, zkontrolujte prosím, zda jste použili celou adresu."
+      send_instructions: "Za několik minut obdržíte email s instrukcemi k nastavení nového hesla."
+      send_paranoid_instructions: "IPokud je e-mailová adresa v naší databázi, obdržíte na ni e-mail pro obnovení hesla."
+      updated: "Vaše heslo bylo úspěšně změněno. Nyní jste přihlášen(a)."
+      updated_not_active: "Vaše heslo bylo změněno."
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address."
-      updated: "Your account has been updated successfully."
-      updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
+      destroyed: "Nashle! Váš účet byl úspěšně zrušen. Doufáme, že se brzy opět uvidíme."
+      signed_up: "Vítejte! Registrace byla úspěšná."
+      signed_up_but_inactive: "Registrace byla úspěšná. Nicméně se nemůžete přihlásit, protože váš účet dosud nebyl aktivován."
+      signed_up_but_locked: "Registrace byla úspěšná. Nicméně se nemůžete přihlásit, protože váš účet je uzamčen."
+      signed_up_but_unconfirmed: "Na váš email by měla přijít zpráva s odkazem pro aktivaci účtu."
+      update_needs_confirmation: "Váš účet byl aktualizován, nicméně musíme ověřit vaši adresu e-mailu. Poslali jsme vám e-mail s odkazem, použijte jej prosím pro potvrzení změny e-mailové adresy."
+      updated: "Váš účet byl úspěšně aktualizován."
+      updated_but_not_signed_in: "Váš účet byl úspěšně aktualizován, ale protože se vaše heslo změnilo, musíte se znovu přihlásit."
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "Přihlášení úspěšné."
+      signed_out: "Odhlášení úspěšné."
+      already_signed_out: "Odhlášení úspěšné."
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "Za několik minut obdržíte email s instrukcemi, jak odemknout svůj účet."
+      send_paranoid_instructions: "Pokud váš účet existuje, obdržíte e-mail s instrukcemi pro jeho odemčení."
+      unlocked: "Váš účet byl úspěšně odemknut. Pro pokračování se přihlašte."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "byl již potvrzen, prosím, zkuste se přihlásit"
+      confirmation_period_expired: "musí být potvrzen během %{period}, požádejte prosím o nový"
+      expired: "vypršel, požádejte prosím o nový"
+      not_found: "nenalezen"
+      not_locked: "nebyl uzamčen"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "%{resource} nebyl uložen kvůli chybě:"
+        other: "%{resource} nebyl uložen kvůli %{count} chybám:"
